docs/v0.3.0/_sources/gallery/extra/lense.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extra/lense.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extra_lense.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extra_lense.py:


Circular Scatterer
==================

This example demonstrates the setup and execution of a circular scatterer experiment using LightWave2D.
We will define the simulation grid, add a lens scatterer, a point source, apply a perfectly matched layer (PML), run the simulation, and visualize the results.

.. GENERATED FROM PYTHON SOURCE LINES 10-11

Importing the necessary packages

.. GENERATED FROM PYTHON SOURCE LINES 11-15

.. code-block:: python3

    from LightWave2D.grid import Grid
    from LightWave2D.experiment import Experiment
    from MPSPlots import colormaps








.. GENERATED FROM PYTHON SOURCE LINES 16-17

Define the simulation grid

.. GENERATED FROM PYTHON SOURCE LINES 17-28

.. code-block:: python3

    grid = Grid(
        resolution=0.1e-6,  # Grid resolution in meters
        size_x=60e-6,       # Grid size in the x direction in meters
        size_y=30e-6,       # Grid size in the y direction in meters
        n_steps=100        # Number of time steps for the simulation
    )

    # Initialize the experiment with the defined grid
    experiment = Experiment(grid=grid)









.. GENERATED FROM PYTHON SOURCE LINES 29-30

Add a lens scatterer to the experiment

.. GENERATED FROM PYTHON SOURCE LINES 30-37

.. code-block:: python3

    scatterer = experiment.add_lense(
        position=('35%', '50%'),  # Center position of the lens
        epsilon_r=2,              # Relative permittivity of the lens
        curvature=10e-6,          # Curvature of the lens in meters
        width=5e-6                # Width of the lens in meters
    )








.. GENERATED FROM PYTHON SOURCE LINES 38-39

Add a point source to the experiment

.. GENERATED FROM PYTHON SOURCE LINES 39-45

.. code-block:: python3

    source = experiment.add_point_source(
        wavelength=1550e-9,       # Wavelength of the source in meters
        position=('10%', '50%'),  # Position of the source
        amplitude=10              # Amplitude of the source
    )








.. GENERATED FROM PYTHON SOURCE LINES 46-47

Add a perfectly matched layer (PML) to absorb boundary reflections

.. GENERATED FROM PYTHON SOURCE LINES 47-54

.. code-block:: python3

    experiment.add_pml(
        order=1,          # Order of the PML polynomial profile
        width='10%',      # Width of the PML region as a percentage of grid size
        sigma_max=5000    # Maximum conductivity for the PML
    )






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    PML(grid=Grid(resolution=1e-07, size_x=6e-05, size_y=3e-05, n_steps=100), width='10%', sigma_max=5000.0, order=1)



.. GENERATED FROM PYTHON SOURCE LINES 55-56

Plot the experiment layout

.. GENERATED FROM PYTHON SOURCE LINES 56-63

.. code-block:: python3

    experiment.plot()


    # Run the FDTD simulation
    experiment.run_fdtd()





.. image-sg:: /gallery/extra/images/sphx_glr_lense_001.png
   :alt: Fiber structure
   :srcset: /gallery/extra/images/sphx_glr_lense_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 64-65

Plot the last time frame of the computed fields

.. GENERATED FROM PYTHON SOURCE LINES 65-72

.. code-block:: python3

    experiment.plot_frame(
        frame_number=-1,  # Plot the last frame
        scale_max=5,      # Maximum scale for the field visualization
        colormap=colormaps.polytechnique.red_black_blue  # Colormap for the plot
    )





.. image-sg:: /gallery/extra/images/sphx_glr_lense_002.png
   :alt: Fiber structure
   :srcset: /gallery/extra/images/sphx_glr_lense_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 73-74

Render an animation of the field propagation over time

.. GENERATED FROM PYTHON SOURCE LINES 74-83

.. code-block:: python3

    animation = experiment.show_propagation(
        skip_frame=5,                            # Number of frames to skip in the animation
        unit_size=5,                             # Size of each unit in the animation
        colormap=colormaps.polytechnique.red_black_blue  # Colormap for the animation
    )


    # Save the animation as a GIF file
    animation.save('./lens_propagation.gif', writer='Pillow', fps=10)



.. image-sg:: /gallery/extra/images/sphx_glr_lense_003.png
   :alt: lense
   :srcset: /gallery/extra/images/sphx_glr_lense_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    MovieWriter Pillow unavailable; using Pillow instead.





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.556 seconds)


.. _sphx_glr_download_gallery_extra_lense.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: lense.py <lense.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: lense.ipynb <lense.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
